mostly fixed layout issues in firefox

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -208,7 +208,10 @@ html, body
 #edit_col
   width: 50%
   box-sizing: border-box
+  background-color: #f2f2f2
 
+#css_col
+  background-color: #f2f2f2
 
 textarea
   background-color: #f2f2f2
@@ -217,6 +220,7 @@ textarea
   resize: none
   margin: 0
   padding 6px
+  padding: 0
   width: 100%
   height: 100%
   padding: 9px
@@ -225,27 +229,32 @@ textarea
     size: 0.9em
   line-height: 1.4em
   color: #333
-  // this would kind of fix the layout in firefox which doesn't seem to undersand box-sizing but naaaa
-  // margin: 1%
-  // padding: 0
-  // width: 97.5%
-  // height: 97.5%
   &:focus
     box-shadow: none
     border: none
     outline: none transparent
 
+// workaround for firefox which doesn't get box-sizing
+@-moz-document url-prefix()
+  textarea
+    margin: 1.2%
+    padding: 0
+    width: 97.5%
+    height: 97.5%
+    overflow: visible
 
 #disp_col
-  padding-left: 5px     // this seems to break the layout in firefox 20 which doesn't seem to understand box-sizing
+  padding-left: 5px
   box-sizing: border-box
-  // this would kind of fix the layout in firefox which doesn't seem to undersand box-sizing but naaaa
-  // div
-  //   width: 99%
-  //   padding-left: 1%
+
+// workaround for firefox which doesn't get box-sizing
+@-moz-document url-prefix()
+  #disp_col
+    padding-left: 0
 
 #html_col pre
   margin: 7px 8px
+
 
 #footer
   height: $footer_height
